fix(epic19): Region read a zone table that does not exist
The shared zone lookup named THE.ISP_SELL_PRICE_ZONE_CODE — which is the name
of the MILL *column* and of a dangling PUBLIC synonym, not of a table. Legacy
resolves that column to THE.APPRAISAL_SELL_PRICE_ZONE_CODE: Mill.java:59-61
maps it to AppraisalSellPrizeZoneCode, the only zone entity registered in
hibernate.cfg.xml:90. Legacy's IspSellPrizeZodeCode class does name the ISP
table, but it is mapped nowhere and referenced by nothing.

So the ORA-00942 in the logs was never an environment gap: the degrade fired on
100% of requests and every mill's Region rendered "-" where legacy shows a real
description. Verified as ILCR$WEB1 on fortmp1 — the APPRAISAL table holds 19
rows, and all 140 THE.MILL rows carry a code that resolves against it (5
Northern Interior, 6 Skeena, 7 Southern Interior, 8 Southern Cariboo, 9 Fort
Nelson - Peace). Both columns are VARCHAR2(2) with no padding.

Fixes both consumers of the shared query: Story 19.2's Region column and Story
19.1's Mill Information PDF, live on main.

Why every test was green: V20260828 CREATED THE.ISP_SELL_PRICE_ZONE_CODE
itself, so the ITs validated the app against a table that exists nowhere but in
the Testcontainer. The snapshot now mirrors delivery (5 columns, all NOT NULL,
read from ALL_TAB_COLUMNS) and MillReportStatusIT's degrade test renames the
real table away. Mirror a delivery table from the legacy @Table mapping, never
from the name of the FK column that points at it.

Also fixed, in the same method rather than left next to the line being edited:
Story 19.1's recorded Map.of() NPE (deferred-work, [high]). The catch now
returns Collections.emptyMap() and the lookup goes through a region(regions,
row) guard, mirroring MillReportStatusService. Two regression tests, including
the NULL-zone-code row that detonated it and the same row on the happy path.

Also documented, no behaviour change: MillReportStatusRepository justified its
unscoped read only as